--- a/src/style.css
+++ b/src/style.css
@@ -65,7 +65,7 @@ background: linear-gradient(180deg, rgba(88,72,255,1) 3%, rgba(141,226,235,1) 99
   background-color: var(--oscuro-medio);
   box-shadow: -10px 10px 11px 0px rgba(0, 0, 0, 0.75);
   width: 540px;
-  height: 285px;
+  height: 300px;
   border-radius: 30px;
 }
 .card__info {
@@ -73,21 +73,38 @@ background: linear-gradient(180deg, rgba(88,72,255,1) 3%, rgba(141,226,235,1) 99
   display: flex;
   flex-direction: column;
 }
-
+.card__info:first-child {
+  margin-top: 20px;
+}
+.card__info-card {
+  display: flex;
+  flex-direction: column;
+}
+.card__info-card-type {
+align-self: flex-end;
+margin-right: 40px;
+}
 .card__info-chip,
 .card__info-card,
-.card__info-number-card {
+.card__info-number-card,
+.card__info-data  {
   width: 100%;
-  height: 60px;
-  /* margin-top: 50px; */
+  height: 65px;
+ 
 }
 
-.card__info-chip > img,
 .card__info-card > img {
+  width: 15%;
+  height: 100%;
+  
+}
+.card__info-chip > img {
   width: 50px;
   height: 50px;
   margin-left: 40px;
+  
 }
+
 .card__info-number {
   font-size: 3.2rem;
   color: var(--claro);
@@ -99,7 +116,7 @@ background: linear-gradient(180deg, rgba(88,72,255,1) 3%, rgba(141,226,235,1) 99
 .card__info-data {
   display: flex;
   justify-content: space-between;
-  margin: 20px 50px;
+  padding: 0 35px;
 }
 .card__info-data-name,
 .card__info-data-expiry,
@@ -111,7 +128,9 @@ background: linear-gradient(180deg, rgba(88,72,255,1) 3%, rgba(141,226,235,1) 99
   font-weight: var(--fw-700);
   margin-top: 20px;
 }
-
+.name, .date, .cvv{
+  font-weight: var(--fw-300);
+}
 .form {
   height: 200px;
   width: 350px;
