--- a/style.css
+++ b/style.css
@@ -81,28 +81,25 @@ background: linear-gradient(180deg, rgba(88,72,255,1) 3%, rgba(141,226,235,1) 99
   flex-direction: column;
 }
 .card__info-card-type {
-align-self: flex-end;
-margin-right: 40px;
+  align-self: flex-end;
+  margin-right: 40px;
 }
 .card__info-chip,
 .card__info-card,
 .card__info-number-card,
-.card__info-data  {
+.card__info-data {
   width: 100%;
   height: 65px;
- 
 }
 
 .card__info-card > img {
   width: 15%;
   height: 100%;
-  
 }
 .card__info-chip > img {
   width: 50px;
   height: 50px;
   margin-left: 40px;
-  
 }
 
 .card__info-number {
@@ -128,7 +125,9 @@ margin-right: 40px;
   font-weight: var(--fw-700);
   margin-top: 20px;
 }
-.name, .date, .cvv{
+.name,
+.date,
+.cvv {
   font-weight: var(--fw-300);
 }
 .form {
@@ -164,10 +163,11 @@ form {
   margin-bottom: 15px;
 }
 
-.cardName{
+.cardName {
   margin-top: 10px;
 }
-.dateCard, .cvvCard{
+.dateCard,
+.cvvCard {
   margin-top: 12px;
   font-family: var(--ff);
 }
@@ -175,21 +175,19 @@ form {
   border: 1px solid var(--claro);
 }
 
-.card__data-container{
+.card__data-container {
   display: none;
 }
 
 .card__data {
   display: flex;
   gap: 50px;
-
 }
 .validText {
   border: 2px solid var(--valid);
 }
 .errorText {
-    border: 2px solid var(--error);
-
+  border: 2px solid var(--error);
 }
 .btn {
   margin-top: 35px;
@@ -208,20 +206,80 @@ form {
   border: 1px solid var(--claro);
 }
 
-.btn__container{
+.btn__container {
   display: flex;
   gap: 40px;
 }
 
-.btnSave, .btnRegister{
+.btnSave,
+.btnRegister {
   display: none;
   width: 200px;
 }
 
+@media (min-width: 320px) and (max-width: 480px) {
+  main {
+    flex-direction: column;
+  }
+  .form {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+  }
 
-@media (min-width: 280px){
+  .card {
+    width: 270px;
+    height: 175px;
+    margin-top: 30px;
+  }
+  .card__info:first-child {
+    margin-top: 10px;
+  }
 
-main{
-  display: block;
+  .card__info-data-name,
+  .card__info-data-expiry,
+  .card__info-data-cvv {
+    font-size: 1rem;
+  }
+  .card__info-chip,
+  .card__info-card,
+  .card__info-number-card,
+  .card__info-data {
+    height: 35px;
+  }
+
+  .card__info-card > img {
+    width: 12%;
+  }
+
+  .card__info-chip > img {
+    width: 30px;
+    height: 30px;
+  }
+
+  .card__info-number {
+    font-size: 2.5rem;
+    margin-top: 8px;
+  }
+  .card__info-data {
+    padding: 0 15px;
+  }
+
+  .form {
+    height: 500px;
+    width: 250px;
+    margin-left: 0;
+  }
+  .card__data {
+    flex-direction: column;
+    gap: 0;
+  }
+  .btn__container {
+    
+    flex-direction: column;
+    gap: 0;
 }
+}
+
+@media (min-width: 481px) and (max-width: 767px) {
 }
