--- a/style.css
+++ b/style.css
@@ -222,10 +222,11 @@ form {
     flex-direction: column;
   }
   .form {
-    height: 500px;
+    height: 100%;
     width: 250px;
     margin-left: 0;
     margin-top: 70px;
+    margin-bottom:  40px;
   }
   form {
     justify-content: start;
@@ -236,6 +237,7 @@ form {
     margin-top: 30px;
   }
   .card__info:first-child {
+    height:  170px;
     margin-top: 10px;
   }
 
@@ -283,7 +285,7 @@ form {
     flex-direction: column;
   }
   .form {
-    height: 500px;
+    height: 100%;
     width: 300px;
     margin-left: 0;
     margin-top: 70px;
@@ -297,6 +299,7 @@ height: 215px;
     margin-top: 30px;
   }
   .card__info:first-child {
+    height:  170px;
     margin-top: 10px;
   }
 
